# confstar

./: README.md  pyproject.toml
confstar/: __init__.py  loader.py  types.py  utils.py
examples/: app.py  config.py
tests/: config.py  test_types.py  utils.py
